# uncontained

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
evaluation/lmbench/: CONFIG.syzkaller
passes/: CMakeLists.txt
passes/ContainerOfSanitizer/: CMakeLists.txt  ContainerOfSanitizer.cpp
passes/DumpContainerOf/: CMakeLists.txt  DumpContainerOf.cpp
passes/DumpTypes/: CMakeLists.txt  DumpTypes.cpp
passes/SimpleDataflowChecker/: CMakeLists.txt  DataflowRule.cpp  DataflowSanitizer.cpp  SimpleDataflowChecker.cpp
passes/include/Colors/: colors.h
passes/include/INIReader/: INIReader.h
passes/include/SimpleDataflowChecker/: Dataflow.hpp  DataflowRule.hpp  DataflowSanitizer.hpp  Helpers.hpp  SimpleDataflowChecker.hpp
passes/include/TypeUtils/: TypeUtils.hpp
patches/lmbench/: 0001-Link-against-tirpc.patch  0002-Fix-rpc-include-error.patch
patches/syzkaller/: 0001-syzkaller-uncontained-ignore-non-uncontained-reports.patch
runtime/: CMakeLists.txt  uncontained_kasan.c  vanilla_list.h
scripts/: compile-and-run.sh  compile.sh  prepare-evaluation.sh  run-fuzzing-performance-evaluation.sh  run-lmbench-performance-evaluation.sh  run-static-analyzer.sh  run.sh
scripts/evaluation/: lmbench.py  syzkaller-bench.py
tests/: config.yaml  test.sh  testDF.sh
tests/test/: .gitignore  test.c  test1.c
tests/testDF/: container_of.h  kobj.h  list.h  test_hit1.c  test_hit10.c  test_hit2.c  test_hit3.c  test_hit4.c  test_hit5.c  test_hit6.c  test_hit7.c  test_hit8.c  test_hit9.c  test_hit_backwards_contained01.c  test_hit_backwards_contained02.c  test_hit_kobj01.c  test_hit_kobj02.c  test_hit_kobj03.c  test_hit_list_entry_correlation01.c  test_hit_list_entry_correlation02.c  test_hit_list_entry_correlation03.c  test_hit_list_entry_correlation04.c  test_hit_list_entry_null.c  test_hit_list_entry_null.yaml  test_nohit1.c  test_nohit2.c  test_nohit3.c  test_nohit_backwards_contained01.c  test_nohit_backwards_contained02.c  test_nohit_kobj01.c  test_nohit_kobj03.c  test_nohit_kobj04.c  test_nohit_list_entry1.c  test_nohit_list_entry2.c  test_nohit_list_entry3.c  test_nohit_list_entry4.c  test_nohit_list_entry4.yaml  test_nohit_list_entry_correlation01.c  test_nohit_list_entry_correlation02.c  test_nohit_list_entry_correlation03.c  (+5 more)
vscode-extension/dataflowcheckerviewer/: .gitignore  CHANGELOG.md  README.md  dataflowviewer-0.0.1.vsix  package-lock.json  package.json
vscode-extension/dataflowcheckerviewer/src/: extension.ts  tree_types.ts  tree_view.ts
vscode-extension/dataflowcheckerviewer/src/items/: flow_item.ts  report_item.ts  rule_item.ts  source_item.ts
